--- a/styles.css
+++ b/styles.css
@@ -232,16 +232,21 @@ section#footer div.footer p { color: #B1BECD; font-size: 1rem; font-weight: 400;
     /* Projects Section */
     section#projects div.projects div.projects_header h1.section_title { font-size: 4rem; }
     section#projects div.projects div.projects_header p { font-size: 1.6rem; padding: 0px 40px;}
-    section#projects div.projects div.all_projects div.project_item { flex-direction: row; border-radius: 0px; box-shadow: none; }
+    section#projects div.projects div.all_projects { padding: 20px; background-color: transparent; }
+    section#projects div.projects div.all_projects div.project_item { flex-direction: row; border-radius: 0px; background: transparent; border-radius: 0px; }
     section#projects div.projects div.all_projects div.project_item:nth-child(even) { flex-direction: row-reverse; }
-    section#projects div.projects div.all_projects div.project_item { height: 400px; margin: 0px; width: 100%; }
-    section#projects div.projects div.all_projects div.project_item div.project_info { height: 100%; border-radius: 0px; }
+    section#projects div.projects div.all_projects div.project_item { height: 100%; margin: 0px; width: 100%; }
+    section#projects div.projects div.all_projects div.project_item.upleft_border { border-top-left-radius: 15px; }
+    section#projects div.projects div.all_projects div.project_item.upright_border { border-top-right-radius: 15px; }
+    section#projects div.projects div.all_projects div.project_item.downleft_border { border-bottom-left-radius: 15px; }
+    section#projects div.projects div.all_projects div.project_item.downright_border { border-bottom-right-radius: 15px; }
+    section#projects div.projects div.all_projects div.project_item div.project_info { height: 400px; border-radius: 0px; }
     section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 2.2rem; }  
     section#projects div.projects div.all_projects div.project_item div.project_info p { font-size: 1.5rem; line-height: 2.5rem; }
     section#projects div.projects div.all_projects div.project_item div.project_info.right p { text-align: right; }
     section#projects div.projects div.all_projects div.project_item div.project_image { height: 400px; display: flex; justify-content: center; align-items: center; }
-    section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(0.8); }
-    section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(1); }
+    section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(0.75); }
+    section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.9); }
     /* End Projects Section */
 
     /* About Section */
