--- a/styles.css
+++ b/styles.css
@@ -183,15 +183,17 @@ section#contact div.contact div h1.section_title { font-size: 2.6rem; font-weigh
 section#contact div.contact { flex-direction: column; max-width: 1200px; margin: 0px auto; }
 section#contact div.contact div p { max-width: 1000px; padding: 0px 30px; font-weight: 400; }
 section#contact div.contact div.contact_items { min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
-section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 250px; padding: 20px; text-align: center; border-radius: 10px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 0px 18px 0 #0000002C; transition: 0.3s ease; transition-property: box-shadow; }
-section#contact div.contact div.contact_items div.contact_item:hover { box-shadow: 0px 0px 5px 0 #0000002C; }
-section#contact div.contact div.contact_items div.contact_item div.icon { width: 70px; margin: 0 auto; margin-bottom: 10px; }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h1 { font-size: 2rem; font-weight: 500; color: #496D96; margin-bottom: 5px; text-transform: uppercase; }
+section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 250px; padding: 20px; text-align: center; border-radius: 10px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition: 0.3s ease; transition-property: box-shadow, transform; }
+section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: -20px; height: 100%; width: 100%; clip-path: circle(180px at center 0); background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); opacity: 0.8; z-index: -1;  }
+section#contact div.contact div.contact_items a:hover div.contact_item { box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); transform: scale(0.95); }
+section#contact div.contact div.contact_items div.contact_item div.icon { width: 70px; margin: 0 auto; margin-bottom: 10px; transition: 0.3s ease; transition-property: transform; }
+section#contact div.contact div.contact_items a:hover div.contact_item div.icon { transform: scale(1.25); }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h1 { font-size: 2rem; font-weight: 500; color: #354B6C; margin-bottom: 20px; text-transform: uppercase; }
 section#contact div.contact div.contact_items div.contact_item div.contact_info h2 { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; font-weight: 500; color: #464146; }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h3 { font-size: 1.5rem; color: #354B6C; margin-top: 10px; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h3 { font-size: 1.5rem; color:#496D96; margin-top: 10px; }
 /* End Contact Section */
 /* Footer Section */
-section#footer { background-image: linear-gradient(45deg, #29323C 0%, #485563 100%); }
+section#footer {background-color: #29323C; }
 section#footer div.footer { min-height: 250px; flex-direction: column; padding-top: 20px; padding-bottom: 10px; }
 section#footer div.footer div.brand h1.brand_title { margin-bottom: 20px; }
 section#footer div.footer h2 { color: #B1BECD; font-weight: 500; text-transform: uppercase; font-size: 1rem; letter-spacing: 0.15rem; margin-bottom: 20px; }
