--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ section#hero div.hero div h1:nth-child(3) span { animation-delay: 2.5s; }
 /* Services Section */
 section#services div.services div.service_top h1.section_title { font-size: 2.6rem; font-weight: 500; }
 section#services div.services { flex-direction: column; text-align: center; max-width: 1500px; margin: 0px auto; padding: 100px 0px; }
-section#services div.services div.service_top { max-width: 1000px; margin: 0px auto; }
+section#services div.services div.service_top { max-width: 1200px; margin: 0px auto; }
 section#services div.services div.service_top p { padding: 0px 30px; font-weight: 400; }
 section#services div.services div.service_bottom { display: flex; align-items: center; justify-content: center; flex-wrap: wrap; margin-top: 50px; }
 section#services div.services div.service_bottom div.service_item { flex-basis: 80%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); padding: 10px; border-radius: 15px; margin: 10px 5%; position: relative; z-index: 1; overflow: hidden; }
@@ -67,7 +67,7 @@ section#services div.services div.service_bottom div.service_item h2 { font-size
 /* End Services Section */
 /* Projects Section */
 section#projects div.projects div.projects_header h1.section_title { font-size: 2.6rem; font-weight: 500; }
-section#projects div.projects div.projects_header { max-width: 1000px; margin: 0px auto; }
+section#projects div.projects div.projects_header { max-width: 1300px; margin: 0px auto; }
 section#projects div.projects div.projects_header p { padding: 0px 30px; font-weight: 400; }
 section#projects div.projects { flex-direction: column; max-width: 1200px; margin: 0px auto; padding: 100px 0px; }
 section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; }
@@ -180,8 +180,8 @@ section#projects div.projects div.all_projects div.project_item:hover div.projec
 
 /* Contact Section */
 section#contact div.contact div h1.section_title { font-size: 2.6rem; font-weight: 500; }
-section#contact div.contact { flex-direction: column; max-width: 1200px; margin: 0px auto; }
-section#contact div.contact div p { max-width: 1000px; padding: 0px 30px; font-weight: 400; }
+section#contact div.contact { flex-direction: column; max-width: 1500px; margin: 0px auto; border: 1px solid black; }
+section#contact div.contact div p { max-width: 1300px; padding: 0px 30px; font-weight: 400; }
 section#contact div.contact div.contact_items { min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
 section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 250px; padding: 20px; text-align: center; border-radius: 10px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition: 0.3s ease; transition-property: box-shadow, transform; }
 section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: -20px; height: 100%; width: 100%; clip-path: circle(180px at center 0); background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); opacity: 0.8; z-index: -1;  }
@@ -312,17 +312,19 @@ section#footer div.footer p { color: #B1BECD; font-size: 1rem; font-weight: 400;
 /* Media Query For Desktop */
 @media only screen and (min-width: 1200px) {
     /* Main Header Menu */
-    section#header div.header div.nav_bar div.nav_list ul li:hover a { font-size: 2.3rem; }
-    section#header div.header div.nav_bar div.nav_list ul li a.active { font-size: 2.3rem; }
-    section#header div.header div.nav_bar div.nav_list div.hamburger { display: none; }
     section#header div.header div.nav_bar div.nav_list ul { position: initial; display: block; height: auto; width: fit-content; background-image: none; }
+    section#header div.header div.nav_bar div.nav_list ul a::after { display: none; }
     section#header div.header div.nav_bar div.nav_list ul li { display: inline-block; }
     section#header div.header div.nav_bar div.nav_list ul li a { font-size: 1.7rem; }
-    section#header div.header div.nav_bar div.nav_list ul a::after { display: none; }
+    section#header div.header div.nav_bar div.nav_list ul li { font-size: 2rem; }
+    section#header div.header div.nav_bar div.nav_list ul li:hover a { font-size: 2.3rem; transition: 0.3s ease; }
+    section#header div.header div.nav_bar div.nav_list ul li a.active { font-size: 2.3rem; }
+    section#header div.header div.nav_bar div.nav_list div.hamburger { display: none; }
     /* End Main Header Menu */
     /* Services Section */
     section#services div.services div.service_top p { font-size: 1.8rem; }
-    section#services div.services div.service_bottom div.service_item { flex-basis: 22%; margin: 1.5%; min-height: 440px; }
+    section#services div.services div.service_bottom div.service_item { flex-basis: 22%; margin: 1.5%; min-height: 440px; max-height: auto; }
+    section#services div.services div.service_bottom div.service_item div.item_icon { margin-bottom: auto; border: 1px solid black; }
     /* End Services Section */
     /* Projects Section */
     section#projects div.projects div.projects_header p { font-size: 1.8rem; }
