--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ img { height: 100%; width: 100%; object-fit: cover; }
 p { color: black; font-size: 1.5rem; margin-top: 5px; line-height: 2.5rem; font-weight: 300; letter-spacing: 0.05rem; text-align: justify; padding: 0px 20px; }
 .section_title { font-size: 4rem; font-weight: 400; color: #464146; margin-bottom: 50px; text-transform: uppercase; letter-spacing: 0.2rem; text-align: center; }
 .section_title span.section_title_span { color: #496D96; }
-.call_to_action { display: inline-block; padding: 10px 30px; color: #B1BECD; background-color: transparent; border: 2px solid #496D96; font-size: 2rem; text-transform: uppercase; letter-spacing: 0.1rem; margin-top: 120px; border-radius: 7px; transition: 0.3s ease; transition-property: background-color, color; }
+.call_to_action { display: inline-block; padding: 10px 30px; color: #B1BECD; background-color: transparent; border: 2px solid #496D96; font-size: 2rem; font-weight: 500; text-transform: uppercase; letter-spacing: 0.1rem; margin-top: 120px; border-radius: 7px; transition: 0.3s ease; transition-property: background-color, color; }
 .call_to_action:hover { color: #EFEFEB; background-color: #496D96; }
 div.brand h1.brand_title { font-size: 1.3rem; text-transform: uppercase; color: #B1BECD; margin-left: 10px; }
 div.brand h1.brand_title span.brand_span { color: #496D96; }
@@ -36,7 +36,7 @@ section#header div.header div.nav_bar div.nav_list div.hamburger.active div.bar:
 /* End Main Header Menu */
 /* Hero Section */
 section#hero div.hero { max-width: 1200px; margin: 0px auto; padding: 0px 50px; justify-content: flex-start; }
-section#hero div.hero div.page_fold { height: 200px; width: 200px; position: absolute; top: 60px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%;}
+section#hero div.hero div.page_fold { height: 200px; width: 200px; position: absolute; top: 60px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1;}
 section#hero div.hero div h1 { display: block; width: fit-content; font-size: 3.8rem; position: relative; top: 100px; color: transparent; animation: text_reveal 0.5s ease forwards; animation-delay: 1s; }
 section#hero div.hero div h1:nth-child(1) { animation-delay: 1s; }
 section#hero div.hero div h1:nth-child(2) { animation-delay: 2s; }
@@ -49,7 +49,7 @@ section#hero div.hero div h1:nth-child(3) span { animation-delay: 2.5s; }
 /* Services Section */
 section#services div.services div.service_top h1.section_title { font-size: 2.6rem; font-weight: 500; }
 section#services div.services { flex-direction: column; text-align: center; max-width: 1500px; margin: 0px auto; padding: 100px 0px; }
-section#services div.services div.service_top { max-width: 1200px; margin: 0px auto; }
+section#services div.services div.service_top { max-width: 1300px; margin: 0px auto; }
 section#services div.services div.service_top p { padding: 0px 30px; font-weight: 400; }
 section#services div.services div.service_bottom { display: flex; align-items: center; justify-content: center; flex-wrap: wrap; margin-top: 50px; }
 section#services div.services div.service_bottom div.service_item { flex-basis: 80%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-image: linear-gradient(60deg, #485563 50%, #29323C 100%); box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); padding: 10px; border-radius: 15px; margin: 10px 5%; position: relative; z-index: 1; overflow: hidden; }
@@ -68,7 +68,7 @@ section#services div.services div.service_bottom div.service_item h2 { font-size
 section#projects div.projects div.projects_header h1.section_title { font-size: 2.6rem; font-weight: 500; }
 section#projects div.projects div.projects_header { max-width: 1300px; margin: 0px auto; }
 section#projects div.projects div.projects_header p { padding: 0px 30px; font-weight: 400; }
-section#projects div.projects { flex-direction: column; max-width: 1200px; margin: 0px auto; padding: 100px 0px; }
+section#projects div.projects { flex-direction: column; max-width: 1400px; margin: 0px auto; padding: 100px 0px; }
 section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; }
 section#projects div.projects div.all_projects div.project_item { display: flex; align-items: center; justify-content: center; flex-direction: column; width: 80%; margin: 20px auto; overflow: hidden; border-radius: 15px; box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); }
 section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-image: linear-gradient(-60deg, #485563 50%, #29323C 100%); }
@@ -220,14 +220,14 @@ section#footer div.footer p { color: #B1BECD; font-size: 1rem; font-weight: 400;
     section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::before { bottom: 12px; }
     /* End Main Header Menu */
     /* Hero Section */
-    section#hero div.hero div.page_fold { height: 350px; width: 350px; position: absolute; top: 90px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%;}
+    section#hero div.hero div.page_fold { height: 350px; width: 350px; position: absolute; top: 90px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1;}
     .call_to_action { font-size: 2.5rem; padding: 20px 60px; }
     section#hero div.hero div h1 { font-size: 7rem; }
     /* End Hero Section */
     /* Services Section */
     section#services div.services div.service_top h1.section_title { font-size: 4rem; }
     section#services div.services div.service_top p { font-size: 1.6rem; padding: 0px 40px; }
-    section#services div.services div.service_bottom div.service_item { flex-basis: 45%; margin: 2.5%; max-height: 359px; }
+    section#services div.services div.service_bottom div.service_item { flex-basis: 45%; margin: 2.5%;  }
     section#services div.services div.service_bottom div.service_item p.service_item_text { font-size: 1.4rem; }
     section#services div.services div.service_bottom div.service_item h2 { font-size: 2rem; }
     /* End Services Section */
@@ -322,19 +322,23 @@ section#footer div.footer p { color: #B1BECD; font-size: 1rem; font-weight: 400;
     section#header div.header div.nav_bar div.nav_list div.hamburger { display: none; }
     /* End Main Header Menu */
     /* Section Home */
-    section#hero div.hero div.page_fold { height: 690px; width: 690px; position: absolute; top: 73px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%;}
+    section#hero div.hero div.page_fold { height: 650px; width: 650px; position: absolute; top: 73px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1;}
     /* End Section Home */
     /* Services Section */
-    section#services div.services div.service_top p { font-size: 1.8rem; }
-    section#services div.services div.service_bottom div.service_item { flex-basis: 22%; margin: 1.5%; min-height: 440px; max-height: auto; }
-    section#services div.services div.service_bottom div.service_item div.item_icon { margin-bottom: auto; }
+    section#services div.services div.service_top p { font-size: 2rem; }
+    section#services div.services div.service_bottom div.service_item { flex-basis: 22%; margin: 1.5%; }
+    section#services div.services div.service_bottom div.service_item h2 { font-size: 1.7rem; margin-left: 20px; color: #496D96; margin-bottom: 10px; text-transform: uppercase; z-index: 2; }
     /* End Services Section */
-    /* Projects Section */
-    section#projects div.projects div.projects_header p { font-size: 1.8rem; }
+    /* Projects Section */ 
+    section#projects div.projects div.projects_header p { font-size: 2rem; }
+    section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 2.5rem; } 
+    section#projects div.projects div.all_projects div.project_item div.project_info p { font-size: 1.7rem; line-height: 2.5rem; }
+    section#projects div.projects div.all_projects div.project_item div.project_image img { transform: scale(0.6) }
+    section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.75); }
     /* End Projects Section */
     /* Contact Section */
-    section#contact div.contact div p { font-size: 1.8rem; padding: 0px 40px; }
-    section#contact div.contact { max-width: 1000px; flex-direction: column; padding: 100px 0px; align-items: center; justify-content: center; min-width: 20vh; }
+    section#contact div.contact div p { font-size: 2rem; padding: 0px 40px; }
+    section#contact div.contact { max-width: 1300px; flex-direction: column; padding: 100px 0px; align-items: center; justify-content: center; min-width: 20vh; }
     section#contact div.contact div.contact_items { width: 100%; display: flex; flex-direction: row; justify-content: space-evenly; align-items: center; margin: 50px; }
     /* End Contact Section */
     /* Footer Section */
